check_detailed.txt
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.44
   Compiling unicode-ident v1.0.23
    Checking windows-link v0.2.1
    Checking cfg-if v1.0.4
   Compiling windows_x86_64_msvc v0.53.1
    Checking windows-link v0.1.3
    Checking smallvec v1.15.1
   Compiling parking_lot_core v0.9.12
    Checking scopeguard v1.2.0
    Checking pin-project-lite v0.2.16
    Checking memchr v2.8.0
   Compiling rustversion v1.0.22
    Checking windows-sys v0.61.2
    Checking lock_api v0.4.14
    Checking windows-strings v0.4.2
    Checking windows-result v0.3.4
    Checking once_cell v1.21.3
    Checking log v0.4.29
   Compiling crossbeam-utils v0.8.21
    Checking regex-syntax v0.8.9
    Checking windows-threading v0.1.0
    Checking futures-core v0.3.31
   Compiling strsim v0.11.1
    Checking aho-corasick v1.1.4
   Compiling ident_case v1.0.1
   Compiling winapi v0.3.9
   Compiling heck v0.5.0
    Checking bytes v1.11.1
    Checking tracing-core v0.1.36
    Checking windows-targets v0.53.5
    Checking parking_lot v0.12.5
    Checking windows-sys v0.60.2
    Checking utf8parse v0.2.2
    Checking bitflags v2.11.0
    Checking regex-automata v0.4.14
    Checking anstyle v1.0.13
    Checking once_cell_polyfill v1.70.2
    Checking itoa v1.0.17
    Checking crossbeam-channel v0.5.15
    Checking anstyle-parse v0.2.7
    Checking foldhash v0.1.5
    Checking colorchoice v1.0.4
   Compiling instability v0.3.11
    Checking mio v1.1.1
    Checking anstyle-wincon v3.0.11
    Checking anstyle-query v1.1.5
   Compiling thiserror v2.0.18
   Compiling paste v1.0.15
    Checking socket2 v0.6.2
    Checking futures-task v0.3.31
    Checking pin-utils v0.1.0
    Checking either v1.15.0
    Checking allocator-api2 v0.2.21
    Checking futures-sink v0.3.31
   Compiling syn v2.0.115
    Checking is_terminal_polyfill v1.70.2
    Checking equivalent v1.0.2
    Checking lazy_static v1.5.0
    Checking powerfmt v0.2.0
    Checking anstream v0.6.21
    Checking futures-util v0.3.31
    Checking itertools v0.13.0
    Checking castaway v0.2.4
    Checking sharded-slab v0.1.7
    Checking deranged v0.5.6
    Checking nu-ansi-term v0.50.3
    Checking tracing-log v0.2.0
    Checking hashbrown v0.15.5
    Checking bstr v1.12.1
    Checking thread_local v1.1.9
    Checking unicode-width v0.1.14
    Checking static_assertions v1.1.0
    Checking clap_lex v1.0.0
   Compiling anyhow v1.0.101
    Checking ryu v1.0.23
    Checking unicode-segmentation v1.12.0
    Checking time-core v0.1.8
   Compiling indoc v2.0.7
    Checking matchers v0.2.0
    Checking num-conv v0.2.0
    Checking lru v0.12.5
    Checking compact_str v0.8.1
    Checking globset v0.4.18
    Checking clap_builder v4.5.58
    Checking cassowary v0.3.0
    Checking time v0.3.47
    Checking crossterm_winapi v0.9.1
    Checking unicode-width v0.2.0
    Checking unicode-truncate v1.1.0
    Checking crossterm v0.28.1
   Compiling darling_core v0.23.0
   Compiling windows-interface v0.59.3
   Compiling windows-implement v0.60.2
   Compiling tokio-macros v2.6.0
   Compiling tracing-attributes v0.1.31
   Compiling actix-macros v0.2.4
   Compiling actix_derive v0.6.2
   Compiling strum_macros v0.26.4
   Compiling thiserror-impl v2.0.18
   Compiling clap_derive v4.5.55
   Compiling async-trait v0.1.89
    Checking tokio v1.49.0
    Checking windows-core v0.61.2
    Checking tracing v0.1.44
    Checking clap v4.5.58
    Checking windows-collections v0.2.0
    Checking windows-future v0.2.1
    Checking windows-numerics v0.2.0
    Checking tracing-subscriber v0.3.22
    Checking strum v0.26.3
   Compiling darling_macro v0.23.0
    Checking windows v0.61.3
   Compiling darling v0.23.0
    Checking tracing-appender v0.2.4
    Checking ratatui v0.29.0
    Checking tokio-util v0.7.18
    Checking actix-rt v2.11.0
    Checking actix v0.13.5
    Checking opc_da_bindings v0.3.1
    Checking opc_comn_bindings v0.3.0
    Checking opc_da v0.3.1
    Checking opc-cli v0.1.0 (C:\Users\WSALIGAN\code\opc-cli)
warning: unused import: `PWSTR`
 --> src\opc_impl.rs:7:29
  |
7 | use windows::core::{PCWSTR, PWSTR};
  |                             ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
System.Management.Automation.RemoteException
error[E0599]: no method named `context` found for struct `HRESULT` in the current scope
   --> src\main.rs:34:14
    |
 33 | /         windows::Win32::System::Com::CoInitializeEx(None, windows::Win32::System::Com::COINIT_MULTITHREADED)
 34 | |             .context("Failed to initialize COM MTA")?;
    | |_____________-^^^^^^^
    |
help: there is a method `to_text` with a similar name, but with different arguments
   --> C:\Users\WSALIGAN\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ratatui-0.29.0\src\text\text.rs:702:5
    |
702 |     fn to_text(&self) -> Text<'_>;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
System.Management.Automation.RemoteException
For more information about this error, try `rustc --explain E0599`.
warning: `opc-cli` (bin "opc-cli") generated 1 warning
error: could not compile `opc-cli` (bin "opc-cli") due to 1 previous error; 1 warning emitted
